--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "adii-api",
-  "version": "1.0.0",
-  "description": "yeh",
+  "version": "0.0.1",
+  "description": "Simple API for Whatsapp Bot features",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adiixyz/Adii-Api.git"
+    "url": "git+https://github.com/Adiixyz/Adii-Api.git"
   },
   "keywords": [
     "YNTKTS"
   ],
-  "author": "Hexagon",
+  "author": "Adiixyz",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/adiixyz/Adii-Api/issues"
+    "url": "https://github.com/Adiixyz/Adii-Api/issues"
   },
-  "homepage": "https://github.com/adiixyz/Adii-Api#readme",
+  "homepage": "https://github.com/Adiixyz/Adii-Api#readme",
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
